[追加・変更]portfolioページを追加しました。

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 
 <html>
 <head>
-<title>私のページ</title>
+<title>takeda koki</title>
 </head>
 <div align="center">
 <br><br>
 
 <hr width="500">
-<a href="index.html">トップ</a>
-　<a href="about.html">プロフィール</a>
-　<a href="link.html">リンク集</a><br>
+<a href="index.html">top</a>
+<a href="about.html">profile</a>
+<a href="link.html">link</a>
+<a href="portfolio.html">portfolio</a><br>
 <hr width="500"><br><br>
 
-初めてホームページを作ってみた。<br><br>
+wellcome<br><br>
 <hr width="500">
 </div>
 </body>
