--- a/about.html
+++ b/about.html
@@ -1,15 +1,16 @@
 
 <html>
 <head>
-<title>プロフィール</title>
+<title>profile</title>
 </head>
 <div align="center">
 <br><br>
 
 <hr width="500">
-<a href="index.html">トップ</a>
-　<a href="about.html">プロフィール</a>
-　<a href="link.html">リンク集</a><br>
+<a href="index.html">top</a>
+<a href="about.html">profile</a>
+<a href="link.html">link</a>
+<a href="portfolio.html">portfolio</a><br>
 <hr width="500"><br><br>
 
 武田孝騎です。
