--- a/link.html
+++ b/link.html
@@ -1,14 +1,15 @@
 <html>
 <head>
-<title>リンク集</title>
+<title>link</title>
 </head>
 <div align="center">
 <br><br>
 
 <hr width="500">
-<a href="index.html">トップ</a>
-　<a href="about.html">プロフィール</a>
-　<a href="link.html">リンク集</a><br>
+<a href="index.html">top</a>
+<a href="about.html">profile</a>
+<a href="link.html">link</a>
+<a href="portfolio.html">portfolio</a><br>
 <hr width="500"><br><br>
 
 下記のサイトを元に作成しました。<br><br>
