--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 <img src="img/portfolio-10.jpg"><br><br>
 <img src="img/portfolio-11.jpg"><br><br>
 
-以上です。この他にも、TGSで紹介したアプリmetalを用いて水を表現した「flowolf」や自主制作作品もあります。<br><br>
+以上です。この他にも、TGSで紹介したアプリmetalを用いて水を表現した「flowolf」や日本画をテーマとした作品「神降ろし」、自主制作作品もあります。<br><br>
 
 <hr width="500">
 <a href="index.html">戻る</a>
