[更新]profileにてcssを追加、文章の加筆を行なった

--- a/about.html
+++ b/about.html
@@ -2,23 +2,47 @@
 <html>
 <head>
 <title>profile</title>
+<style type="text/css"> 
+.main {
+	width: 100%;
+	//border: 1px solid #000;
+	text-align: center;
+}
+.main div	{
+	width: 450;
+	//border: 1px solid #FF0000;
+	margin: 0 auto;
+	text-align: left;
+}
+</style>
 </head>
 <div align="center">
 <br><br>
-
 <hr width="500">
 <a href="index.html">top</a>
 <a href="about.html">profile</a>
 <a href="link.html">link</a>
 <a href="portfolio.html">portfolio</a><br>
 <hr width="500"><br><br>
+</div>
+<div class="main">
+<div align="left">
+<!--div style="padding : 0px 200px 0px 100px"-->
+武田孝騎です。<br>
+東京工科大学メディア学部所属2019年卒業予定<br>
+使用しているプログラミング言語は主にswiftですが、c言語も基礎ですができます。<br>
 
-武田孝騎です。
-<br><br>
+xcodeにてswiftを使ってios向けアプリケーション制作をしています。<br><br>
 
-swiftを使ってios向けアプリケーション制作をしています。<br>
+趣味はゲームやアニメ・漫画等を楽しむことや<br>
+美術館・博物館・展覧会に赴くこと<br>
+（ジャンルとしては大学入学以前は西洋美術が多めでしたが、<br>
+現在はやまと絵・新版画・現代美術・舞台芸術など幅広くなりました。）、<br>
+喫茶店・コーヒーショップを探すこと、<br>
+科学雑誌を読むこと（ジャンルとしては素粒子物理学・相対性理論・ブラックホール・惑星物理学）などです。<br><br>
 サイトは建設中です。これからよくしていこうと思います。<br><br>
-
+</div></div>
+<div align="center">
 <hr width="500">
 <a href="index.html">戻る</a>
 </div>
