[追加・変更]英語に対応しました。その際に全てのページにレイアウト用のcssを記述しました。

--- a/about.html
+++ b/about.html
@@ -14,17 +14,43 @@
 	margin: 0 auto;
 	text-align: left;
 }
+
+.chgEng {
+	width: 100%;
+	//border: 1px solid #000;
+	text-align: center;
+}
+.chgEng div	{
+	width: 450;
+	//border: 1px solid #FF0000;
+	margin: 0 auto;
+	text-align: right;
+}
 </style>
 </head>
+
+<br>
+<div class="main">
+<div align="left">
+profile<br>
+</div></div>
 <div align="center">
-<br><br>
 <hr width="500">
 <a href="index.html">top</a>
 <a href="about.html">profile</a>
+<a href="portfolio.html">portfolio</a>
 <a href="link.html">link</a>
-<a href="portfolio.html">portfolio</a><br>
-<hr width="500"><br><br>
+<br>
+<hr width="500">
 </div>
+
+<div class="chgEng">
+<div align="right">
+<a href="aboutEng.html">English</a>
+<br>
+<br>
+</div></div>
+
 <div class="main">
 <div align="left">
 <!--div style="padding : 0px 200px 0px 100px"-->
