--- a/indexEng.html
+++ b/indexEng.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>takeda koki</title>
+<title>takeda koki English</title>
 <style type="text/css"> 
 .main {
 	width: 100%;
@@ -36,10 +36,10 @@
 </div></div>
 <div align="center">
 <hr width="500">
-<a href="index.html">top</a>
-<a href="about.html">profile</a>
-<a href="portfolio.html">portfolio</a>
-<a href="link.html">link</a>
+<a href="indexEng.html">top</a>
+<a href="aboutEng.html">profile</a>
+<a href="portfolioEng.html">portfolio</a>
+<a href="linkEng.html">link</a>
 <br>
 <hr width="500"><br><br>
 
