--- a/linkEng.html
+++ b/linkEng.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>link</title>
+<title>link English</title>
 <style type="text/css"> 
 .main {
 	width: 100%;
@@ -14,12 +14,12 @@
 	text-align: left;
 }
 
-.chgEng {
+.chgJP {
 	width: 100%;
 	//border: 1px solid #000;
 	text-align: center;
 }
-.chgEng div	{
+.chgJP div	{
 	width: 450;
 	//border: 1px solid #FF0000;
 	margin: 0 auto;
@@ -35,29 +35,30 @@ link<br>
 </div></div>
 <div align="center">
 <hr width="500">
-<a href="index.html">top</a>
-<a href="about.html">profile</a>
-<a href="portfolio.html">portfolio</a>
-<a href="link.html">link</a>
+<a href="indexEng.html">top</a>
+<a href="aboutEng.html">profile</a>
+<a href="portfolioEng.html">portfolio</a>
+<a href="linkEng.html">link</a>
 <br>
 <hr width="500">
 </div>
 
-<div class="chgEng">
+<div class="chgJP">
 <div align="right">
-<a href="linkEng.html">English</a>
+<a href="link.html">japanese</a>
 <br>
 <br>
 </div></div>
 
 <div align="center">
-下記のサイトを元に作成しました。<br>
+I made it with reference to the following site.<br>
+
 <a href="http://www.shoshinsha.com/hp/index.html">
 1時間で作るホームページ</a><br><br>
-
-下記のサイトは自分の活動を支えて鍛えていただいたプロジェクトです。<br>
+The following site is the introduction page of TUT Creative Application. <br>
+TUT Creative Application is a project to train and raised myself.<br>
 <a href="http://kengolab.net/CreApp/wiki/">TUT Creative Application</a><br>
 <hr width="500">
-<a href="index.html">戻る</a>
+<a href="indexEng.html">back to the top</a>
 </div>
 </body>
