--- a/portfolioEng.html
+++ b/portfolioEng.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>portfolio</title>
+<title>portfolio English</title>
 <style type="text/css"> 
 .main {
 	width: 100%;
@@ -14,12 +14,12 @@
 	text-align: left;
 }
 
-.chgEng {
+.chgJP {
 	width: 100%;
 	//border: 1px solid #000;
 	text-align: center;
 }
-.chgEng div	{
+.chgJP div	{
 	width: 450;
 	//border: 1px solid #FF0000;
 	margin: 0 auto;
@@ -35,24 +35,24 @@ portfolio<br>
 </div></div>
 <div align="center">
 <hr width="500">
-<a href="index.html">top</a>
-<a href="about.html">profile</a>
-<a href="portfolio.html">portfolio</a>
-<a href="link.html">link</a>
+<a href="indexEng.html">top</a>
+<a href="aboutEng.html">profile</a>
+<a href="portfolioEng.html">portfolio</a>
+<a href="linkEng.html">link</a>
 <br>
 <hr width="500">
 
 </div>
 
-<div class="chgEng">
+<div class="chgJP">
 <div align="right">
-<a href="portfolioEng.html">English</a>
+<a href="portfolio.html">japanese</a>
 <br>
 <br>
 </div></div>
 
 <div align="center">
-下記からです。<br><br>
+There is a portfolio below.<br><br>
 
 <img src="img/portfolio-1.jpg"><br><br>
 <img src="img/portfolio-2.jpg"><br><br>
@@ -66,9 +66,11 @@ portfolio<br>
 <img src="img/portfolio-10.jpg"><br><br>
 <img src="img/portfolio-11.jpg"><br><br>
 
-以上です。この他にも、TGSで紹介したアプリmetalを用いて水を表現した「flowolf」や日本画をテーマとした作品「神降ろし」、自主制作作品もあります。<br><br>
-
+that's all.<br>
+Besides this there are apps introduced at the Tokyo Game Show. <br>
+It is "flowolf" which expresses water using metal and a work "Kintoroshi" which is a theme of Japanese paintings.<br><br>
+Thankyou for reading in this page.<br><br>
 <hr width="500">
-<a href="index.html">戻る</a>
+<a href="indexEng.html">back to the top</a>
 </div>
 </body>
