[修正・追加]facebookページリンク追加に伴い、加筆修正を行った。

--- a/about.html
+++ b/about.html
@@ -55,7 +55,10 @@ profile<br>
 <div align="left">
 <!--div style="padding : 0px 200px 0px 100px"-->
 武田孝騎です。<br>
-東京工科大学メディア学部所属2019年卒業予定<br>
+東京工科大学メディア学部所属2019年卒業予定<br><br>
+
+・facebook:<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
+
 使用しているプログラミング言語は主にswiftですが、c言語も基礎ですができます。<br>
 
 xcodeにてswiftを使ってios向けアプリケーション制作をしています。<br><br>
