--- a/aboutEng.html
+++ b/aboutEng.html
@@ -56,7 +56,10 @@ profile<br>
 <!--div style="padding : 0px 200px 0px 100px"-->
 I am Koki Takeda.<br>
 Department of Media Science, Tokyo University of Technology<br>
-Planned to graduate in 2019<br>
+Planned to graduate in 2019<br><br>
+
+・facebook:<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
+
 The programming language you are using is primarily swift.<br>
 I can make the c language the basic.<br>
 I am using swift at xcode to create applications for ios.<br><br>
