--- a/link.html
+++ b/link.html
@@ -52,11 +52,11 @@ link<br>
 
 <div align="center">
 下記のサイトを元に作成しました。<br>
-<a href="http://www.shoshinsha.com/hp/index.html">
-1時間で作るホームページ</a><br><br>
+1時間で作るホームページ:<a href="http://www.shoshinsha.com/hp/index.html">http://www.shoshinsha.com/hp/index.html</a><br><br>
 
 下記のサイトは自分の活動を支えて鍛えていただいたプロジェクトです。<br>
-<a href="http://kengolab.net/CreApp/wiki/">TUT Creative Application</a><br>
+TUT Creative Application:<a href="http://kengolab.net/CreApp/wiki/">http://kengolab.net/CreApp/wiki/</a><br><br>
+
 <hr width="500">
 <a href="index.html">戻る</a>
 </div>
