--- a/linkEng.html
+++ b/linkEng.html
@@ -53,11 +53,10 @@ link<br>
 <div align="center">
 I made it with reference to the following site.<br>
 
-<a href="http://www.shoshinsha.com/hp/index.html">
-1時間で作るホームページ</a><br><br>
+1時間で作るホームページ:<a href="http://www.shoshinsha.com/hp/index.html">http://www.shoshinsha.com/hp/index.html</a><br><br>
 The following site is the introduction page of TUT Creative Application. <br>
 TUT Creative Application is a project to train and raised myself.<br>
-<a href="http://kengolab.net/CreApp/wiki/">TUT Creative Application</a><br>
+TUT Creative Application:<a href="http://kengolab.net/CreApp/wiki/">http://kengolab.net/CreApp/wiki/</a><br><br>
 <hr width="500">
 <a href="indexEng.html">back to the top</a>
 </div>
