[実験・追加]worksという作品集紹介のページを作成。それに伴い、検索を実装した。またスタイルとしてモーダルウィンドウを実験した。

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,7 @@ portfolio<br>
 <hr width="500">
 <a href="index.html">top</a>
 <a href="about.html">profile</a>
+	<a href="works.html">works</a>
 <a href="portfolio.html">portfolio</a>
 <a href="link.html">link</a>
 <br>
