--- a/portfolioEng.html
+++ b/portfolioEng.html
@@ -37,6 +37,7 @@ portfolio<br>
 <hr width="500">
 <a href="indexEng.html">top</a>
 <a href="aboutEng.html">profile</a>
+	<a href="works.html">works</a>
 <a href="portfolioEng.html">portfolio</a>
 <a href="linkEng.html">link</a>
 <br>
