--- a/about.html
+++ b/about.html
@@ -37,9 +37,10 @@ profile<br>
 <div align="center">
 <hr width="500">
 <a href="index.html">top</a>
-<a href="about.html">profile</a>
-<a href="portfolio.html">portfolio</a>
-<a href="link.html">link</a>
+	<a href="about.html">profile</a>
+	<a href="works.html">works</a>
+	<a href="portfolio.html">portfolio</a>
+	<a href="link.html">link</a>
 <br>
 <hr width="500">
 </div>
