--- a/indexEng.html
+++ b/indexEng.html
@@ -38,6 +38,7 @@
 <hr width="500">
 <a href="indexEng.html">top</a>
 <a href="aboutEng.html">profile</a>
+	<a href="works.html">works</a>
 <a href="portfolioEng.html">portfolio</a>
 <a href="linkEng.html">link</a>
 <br>
