--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,9 @@
 	margin: 0 auto;
 	text-align: left;
 }
+.img {
+	width: 40%;	
+}
 
 .chgEng {
 	width: 100%;
@@ -55,17 +58,17 @@ portfolio<br>
 <div align="center">
 下記からです。<br><br>
 
-<img src="img/portfolio-1.jpg"><br><br>
-<img src="img/portfolio-2.jpg"><br><br>
-<img src="img/portfolio-3.jpg"><br><br>
-<img src="img/portfolio-4.jpg"><br><br>
-<img src="img/portfolio-5.jpg"><br><br>
-<img src="img/portfolio-6.jpg"><br><br>
-<img src="img/portfolio-7.jpg"><br><br>
-<img src="img/portfolio-8.jpg"><br><br>
-<img src="img/portfolio-9.jpg"><br><br>
-<img src="img/portfolio-10.jpg"><br><br>
-<img src="img/portfolio-11.jpg"><br><br>
+<img src="img/portfolio-1.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-2.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-3.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-4.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-5.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-6.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-7.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-8.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-9.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-10.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-11.jpg" alt="" class="img"><br><br>
 
 以上です。この他にも、TGSで紹介したアプリmetalを用いて水を表現した「flowolf」や日本画をテーマとした作品「神降ろし」、自主制作作品もあります。<br><br>
 
