--- a/portfolioEng.html
+++ b/portfolioEng.html
@@ -13,6 +13,9 @@
 	margin: 0 auto;
 	text-align: left;
 }
+.img {
+	width: 40%;	
+}
 
 .chgJP {
 	width: 100%;
@@ -55,17 +58,17 @@ portfolio<br>
 <div align="center">
 There is a portfolio below.<br><br>
 
-<img src="img/portfolio-1.jpg"><br><br>
-<img src="img/portfolio-2.jpg"><br><br>
-<img src="img/portfolio-3.jpg"><br><br>
-<img src="img/portfolio-4.jpg"><br><br>
-<img src="img/portfolio-5.jpg"><br><br>
-<img src="img/portfolio-6.jpg"><br><br>
-<img src="img/portfolio-7.jpg"><br><br>
-<img src="img/portfolio-8.jpg"><br><br>
-<img src="img/portfolio-9.jpg"><br><br>
-<img src="img/portfolio-10.jpg"><br><br>
-<img src="img/portfolio-11.jpg"><br><br>
+<img src="img/portfolio-1.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-2.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-3.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-4.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-5.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-6.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-7.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-8.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-9.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-10.jpg" alt="" class="img"><br><br>
+<img src="img/portfolio-11.jpg" alt="" class="img"><br><br>
 
 that's all.<br>
 Besides this there are apps introduced at the Tokyo Game Show. <br>
