--- a/portfolio.html
+++ b/portfolio.html
@@ -58,19 +58,30 @@ portfolio<br>
 <div align="center">
 下記からです。<br><br>
 
-<img src="img/portfolio-1.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-2.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-3.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-4.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-5.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-6.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-7.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-8.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-9.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-10.jpg" alt="" class="img"><br><br>
-<img src="img/portfolio-11.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_01.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_02.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_03.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_04.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_05.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_06.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_07.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_08.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_09.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_10.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_11.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_12.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_13.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_14.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_15.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_16.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_17.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_18.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_19.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_20.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_21.jpg" alt="" class="img"><br><br>
+<img src="img/newPortfolio01_22.jpg" alt="" class="img"><br><br>
 
-以上です。この他にも、TGSで紹介したアプリmetalを用いて水を表現した「flowolf」や日本画をテーマとした作品「神降ろし」、自主制作作品もあります。<br><br>
+以上です。<br><br>
 
 <hr width="500">
 <a href="index.html">戻る</a>
