[修正]wantedlyサイトへのリンクを追加しました。

--- a/about.html
+++ b/about.html
@@ -59,8 +59,9 @@ profile<br>
 東京工科大学メディア学部所属2019年卒業予定<br><br>
 
 ・facebook:<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
+・wantedly:<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
 
-使用しているプログラミング言語は主にswiftですが、c言語も基礎ですができます。<br>
+使用しているプログラミング言語は主にswiftですが、c言語も基礎ですができます。その他使える技能は自分の<a href="https://www.wantedly.com/users/50921451">wantedly</a>サイトを見ていただけるとありがたいです。<br>
 
 xcodeにてswiftを使ってios向けアプリケーション制作をしています。<br><br>
 
