--- a/aboutEng.html
+++ b/aboutEng.html
@@ -60,9 +60,10 @@ Department of Media Science, Tokyo University of Technology<br>
 Planned to graduate in 2019<br><br>
 
 ・facebook:<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
+・wantedly:<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
 
 The programming language you are using is primarily swift.<br>
-I can make the c language the basic.<br>
+I can make the c language the basic.Others You can check skills that you can use by looking at my <a href="https://www.wantedly.com/users/50921451">wantedly</a> site.<br>
 I am using swift at xcode to create applications for ios.<br><br>
 
 · Hobbies are enjoying games, animation, manga etc.<br>
