[修正]英文がおかしかったので修正

--- a/aboutEng.html
+++ b/aboutEng.html
@@ -63,7 +63,7 @@ Planned to graduate in 2019<br><br>
 ・wantedly:<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
 
 The programming language you are using is primarily swift.<br>
-I can make the c language the basic.Others You can check skills that you can use by looking at my <a href="https://www.wantedly.com/users/50921451">wantedly</a> site.<br>
+I can make the c language the basic. If you want to see other skills that I can use, you can check my<a href="https://www.wantedly.com/users/50921451">wantedly</a> site.<br>
 I am using swift at xcode to create applications for ios.<br><br>
 
 · Hobbies are enjoying games, animation, manga etc.<br>
