[更新]wikiリンクを追加しました。

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <hr width="500"><br><br>
 
 wellcome<br><br>
+<a href="http://kokitakeda.sakura.ne.jp/dokuwiki/">Wiki is here</a>
 <hr width="500">
 </div>
 </body>
