[変更]画像を削除しwikiへのリンクを貼りました。

--- a/portfolioEng.html
+++ b/portfolioEng.html
@@ -56,8 +56,8 @@ portfolio<br>
 </div></div>
 
 <div align="center">
-There is a portfolio below.<br><br>
-
+<br><br>
+I summarized it on the <a href="http://kokitakeda.sakura.ne.jp/dokuwiki/doku.php/local/classroom/2018/kouki/development/imamade">wiki</a> so please have a look there.
 <img src="img/newPortfolio01_01.jpg" alt="" class="img"><br><br>
 <img src="img/newPortfolio01_02.jpg" alt="" class="img"><br><br>
 <img src="img/newPortfolio01_03.jpg" alt="" class="img"><br><br>
