[追加] gameができるようになりました笑

--- a/link.html
+++ b/link.html
@@ -58,6 +58,8 @@ link<br>
 下記のサイトは自分の活動を支えて鍛えていただいたプロジェクトです。<br>
 TUT Creative Application:<a href="http://kengolab.net/CreApp/wiki/">http://kengolab.net/CreApp/wiki/</a><br><br>
 
+<a href="game.html">game start!</a>
+
 <hr width="500">
 <a href="index.html">戻る</a>
 </div>
