[修正]スタイルシートを参照するように修正

--- a/about.html
+++ b/about.html
@@ -2,31 +2,7 @@
 <html>
 <head>
 <title>profile</title>
-<style type="text/css"> 
-.main {
-	width: 100%;
-	//border: 1px solid #000;
-	text-align: center;
-}
-.main div	{
-	width: 450;
-	//border: 1px solid #FF0000;
-	margin: 0 auto;
-	text-align: left;
-}
-
-.chgEng {
-	width: 100%;
-	//border: 1px solid #000;
-	text-align: center;
-}
-.chgEng div	{
-	width: 450;
-	//border: 1px solid #FF0000;
-	margin: 0 auto;
-	text-align: right;
-}
-</style>
+<link href="css/style2.css" rel="stylesheet">
 </head>
 
 <br>
