--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>profile</title>
+<meta name="viewport" content="width=device-width">
 <link href="css/style2.css" rel="stylesheet">
 </head>
 
