[変更・追加]スマホ対応・文字を大きく

--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <head>
 <title>profile</title>
 <meta name="viewport" content="width=device-width">
-<link href="css/style2.css" rel="stylesheet">
+<!--link href="css/style2.css" rel="stylesheet"-->
+<link rel="stylesheet" href="css/style2.css" type="text/css" media="screen and (min-width:600px)">
+<link rel="stylesheet" href="css/style3.css" type="text/css" media="screen and (max-width:599px)">
+<link rel="stylesheet" href="css/style2.css" type="text/css" media="screen and (min-width:1200px)">
 </head>
 
 <br>
@@ -11,6 +14,7 @@
 <div align="left">
 profile<br>
 </div></div>
+<div class="title">
 <div align="center">
 <hr width="500">
 <a href="index.html">top</a>
@@ -20,7 +24,7 @@ profile<br>
 	<a href="link.html">link</a>
 <br>
 <hr width="500">
-</div>
+</div></div>
 
 <div class="chgEng">
 <div align="right">
@@ -33,7 +37,7 @@ profile<br>
 <div align="left">
 <!--div style="padding : 0px 200px 0px 100px"-->
 武田孝騎です。<br>
-東京工科大学メディア学部所属2019年卒業予定<br><br>
+東京工科大学メディア学部所属2019年卒業<br><br>
 
 ・facebook:<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
 ・wantedly:<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
