--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@ profile<br>
 東京工科大学メディア学部所属2019年卒業<br><br>
 
 ・facebook:<br>
-<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
+<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/<br>kouki.takeda.146</a><br><br>
 ・wantedly:<br>
-<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
+<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/<br>users/50921451</a><br><br>
 
 使用しているプログラミング言語は主にswiftですが、c言語も基礎ですができます。その他使える技能は自分の<a href="https://www.wantedly.com/users/50921451">wantedly</a>サイトを見ていただけるとありがたいです。<br>
 
