--- a/aboutEng.html
+++ b/aboutEng.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>profile English</title>
+<meta name="viewport" content="width=device-width">
 <style type="text/css"> 
 .main {
 	width: 100%;
