[修正]スマホ対応

--- a/portfolioEng.html
+++ b/portfolioEng.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>portfolio English</title>
+<meta name="viewport" content="width=device-width">
 <style type="text/css"> 
 .main {
 	width: 100%;
