--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>portfolio</title>
+<meta name="viewport" content="width=device-width">
 <style type="text/css"> 
 .main {
 	width: 100%;
