[追加・変更] アプリ「omokake」のページ・プライバシーポリシーのページを追加 自己紹介文の修正とツイッターアカウントの追加 worksの修正

--- a/aboutEng.html
+++ b/aboutEng.html
@@ -3,7 +3,7 @@
 <head>
 <title>profile English</title>
 <meta name="viewport" content="width=device-width">
-<style type="text/css"> 
+<style type="text/css">
 .main {
 	width: 100%;
 	//border: 1px solid #000;
@@ -60,8 +60,12 @@ I am Koki Takeda.<br>
 Department of Media Science, Tokyo University of Technology<br>
 Planned to graduate in 2019<br><br>
 
-・facebook:<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
-・wantedly:<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
+・twitter:<br>
+<a href="https://twitter.com/bluewhitered123">https://twitter.com/bluewhitered123</a><br><br>
+・facebook:<br>
+<a href="https://www.facebook.com/kouki.takeda.146">https://www.facebook.com/kouki.takeda.146</a><br><br>
+・wantedly:<br>
+<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
 
 The programming language you are using is primarily swift.<br>
 I can make the c language the basic. If you want to see other skills that I can use, you can check my<a href="https://www.wantedly.com/users/50921451">wantedly</a> site.<br>
