--- a/works.html
+++ b/works.html
@@ -7,7 +7,7 @@
 		<script src="js/jquery-3.2.1.js"></script>
 		<script src="js/underscore.js"></script>
 		<script src="js/script.js"></script>
-		
+
 		<link href="css/modal2.css" rel="stylesheet">
 		<!--script src="js/modal.js"></script-->
 	</head>
@@ -31,8 +31,6 @@
 
 <div class="chgEng"><div align="right">
 	<!--a href="worksEng.html">English</a-->
-	<br>
-	<br>
 </div></div>
 
 
@@ -65,8 +63,8 @@
     <p><a class="modal-close">閉じる</a></p>
 </div-->
 
-<div class="filterArea">
-	<!--div class="filter_life">
+<!--div class="filterArea">
+	<div class="filter_life">
 		<h2>場所指定</h2>
 		<select name="life">
 			<option value="">指定なし</option>
@@ -75,15 +73,15 @@
 			<option value="3">31～50</option>
 			<option value="4">51～</option>
 		</select>
-	</div-->			
-	<div class="filter_keyword">
-		<h2>keyword</h2>
+	</div-->
+	<!--div class="filter_keyword">
+		<a>keyword</a><br>
 		<input type="text" name="filter_free" size="40" />&nbsp;<button type='button' name='free_submit'>search🔎</button>
-	</div>				
-<!--/.filterArea--></div>
+	</div-->
+<!--/.filterArea></div-->
 <div class="resultArea">
 	<div class="productCntArea"></div>
-	<div class="productArea"></div>	
+	<div class="productArea"></div>
 <!--/.resultArea--></div>
 
 <div align="center">
