刷新。worksの刷新・コード修正・ディレクトリ整理・フォント調整。

--- a/indexEng.html
+++ b/indexEng.html
@@ -3,50 +3,38 @@
 <head>
 <title>takeda koki English</title>
 <meta name="viewport" content="width=device-width">
-<style type="text/css"> 
-.main {
-	width: 100%;
-	//border: 1px solid #000;
-	text-align: center;
-}
-.main div	{
-	width: 450;
-	//border: 1px solid #FF0000;
-	margin: 0 auto;
-	text-align: left;
-}
-
-.chgEng {
-	width: 100%;
-	//border: 1px solid #000;
-	text-align: center;
-}
-.chgEng div	{
-	width: 450;
-	//border: 1px solid #FF0000;
-	margin: 0 auto;
-	text-align: right;
-}
-</style>
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style2.css" type="text/css" media="screen and (min-width:700px)">
+<link rel="stylesheet" href="css/style3.css" type="text/css" media="screen and (max-width:699px)">
 </head>
-
-<br>
-<div class="main">
-<div align="left">
-<br>
-</div></div>
-<div align="center">
-<hr width="500">
-<a href="indexEng.html">top</a>
-<a href="aboutEng.html">profile</a>
-	<a href="works.html">works</a>
-<a href="portfolioEng.html">portfolio</a>
-<a href="linkEng.html">link</a>
-<br>
-<hr width="500"><br><br>
-
-wellcome<br><br>
-<hr width="500">
-</div>
+<body>
+	<br>
+	<div class="title">
+	<div align="left">
+	<br>
+	</div></div>
+	<div class="titleBer">
+		<hr width="400">
+		<div align="center">
+			<a href="mainContent/indexEng.html">top</a>
+			<a href="mainContent/aboutEng.html">profile</a>
+			<a href="mainContent/works.html">works</a>
+			<a href="mainContent/portfolioEng.html">portfolio</a>
+			<a href="mainContent/linkEng.html">link</a>
+			<br>
+		</div>
+		<hr width="400">
+	</div>
+	
+	
+	<div class="titleBer">
+		<div align="center">
+			wellcome<br><br>
+			<a href="http://kokitakeda.sakura.ne.jp/dokuwiki/">Wiki is here</a>
+		</div>
+	</div>
+	<hr width="400">
+	</div>
+</body>
 </body>
 </html>
