--- a/index.html
+++ b/index.html
@@ -1,53 +1,39 @@
 
 <html>
-<head>
-<title>takeda koki</title>
-<meta name="viewport" content="width=device-width">
-<style type="text/css"> 
-.main {
-	width: 100%;
-	//border: 1px solid #000;
-	text-align: center;
-}
-.main div	{
-	width: 450;
-	//border: 1px solid #FF0000;
-	margin: 0 auto;
-	text-align: left;
-}
-
-.chgEng {
-	width: 100%;
-	//border: 1px solid #000;
-	text-align: center;
-}
-.chgEng div	{
-	width: 450;
-	//border: 1px solid #FF0000;
-	margin: 0 auto;
-	text-align: right;
-}
-</style>
-</head>
-
-<br>
-<div class="main">
-<div align="left">
-<br>
-</div></div>
-<div align="center">
-<hr width="500">
-<a href="index.html">top</a>
-<a href="about.html">profile</a>
-<a href="works.html">works</a>
-<a href="portfolio.html">portfolio</a>
-<a href="link.html">link</a>
-<br>
-<hr width="500"><br><br>
-
-wellcome<br><br>
-<a href="http://kokitakeda.sakura.ne.jp/dokuwiki/">Wiki is here</a>
-<hr width="500">
-</div>
-</body>
+	<head>
+		<title>takeda koki</title>
+		<meta name="viewport" content="width=device-width">
+		<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/style2.css" type="text/css" media="screen and (min-width:700px)">
+		<link rel="stylesheet" href="css/style3.css" type="text/css" media="screen and (max-width:699px)">
+	</head>
+		<body>
+			<br>
+			<div class="title">
+			<div align="left">
+			<br>
+			</div></div>
+			<div class="titleBer">
+				<hr width="400">
+				<div align="center">
+					<a href="index.html">top</a>
+					<a href="mainContent/about.html">profile</a>
+					<a href="mainContent/works.html">works</a>
+					<a href="mainContent/portfolio.html">portfolio</a>
+					<a href="mainContent/link.html">link</a>
+					<br>
+				</div>
+				<hr width="400">
+			</div>
+			
+			
+			<div class="titleBer">
+				<div align="center">
+					wellcome<br><br>
+					<a href="http://kokitakeda.sakura.ne.jp/dokuwiki/">Wiki is here</a>
+				</div>
+			</div>
+			<hr width="400">
+			</div>
+		</body>
 </html>
