説明文の修正

--- a/omokake.html
+++ b/omokake.html
@@ -56,8 +56,8 @@
 <br>
 その思い出たちが欠片となって動き出したら？<br>
 <br>
-思い出と触れ合える<br>
-実験的アプリです。<br>
+たくさんの思い出に触れることを<br>
+コンセプトにしたアプリです。<br>
 <br>
 <img src="img/mymovie.gif" alt="icon" title="icon">
 <br>
@@ -67,8 +67,8 @@
   privacypolicy.html</a><br><br>
 
   ・Developing by koki takeda:<br>
-  <a href="about.html">https://koukitakeda.github.io/homepage.io/
-    about.html</a><br><br>
+  <a href="https://twitter.com/bluewhitered123">https://twitter.com/bluewhitered123
+    </a><br><br>
 
 </div>
 </div>
