--- a/omokake.html
+++ b/omokake.html
@@ -63,7 +63,7 @@
 <br>
 <br>
 ・プライバシーポリシー:<br>
-<a href="privacypolicy.html">https://koukitakeda.github.io/homepage.io/
+<a href="privacypolicy.html">https://kokitakashiki.github.io/homepage.io/
   privacypolicy.html</a><br><br>
 
   ・Developing by koki takeda:<br>
