ターゲットをiPhoneのみに変更。

--- a/omokake.html
+++ b/omokake.html
@@ -46,7 +46,7 @@
 
 <div align="left">
 <div style="padding : 0px 50px 0px 5px">
-スマートフォンを購入したあの日から<br>
+iPhoneを購入したあの日から<br>
 どれくらい経ちましたか？<br>
 <br>
 楽しい日々の写真や<br>
