--- a/privacypolicyEnglish.html
+++ b/privacypolicyEnglish.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	"http://www.w3.org/TR/html4/loose.dtd">
-<html lang="ja">
+<html lang="en">
 	<head>
 		<title>Privacy Policy</title>
 	</head>
