--- a/privacypolicyEnglish.html
+++ b/privacypolicyEnglish.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Privacy Policy</h1>
 		<h2>Privacy Policy</h2>
-			<p>KKoki Takeda has created "omokake" as a free application.<br>
+			<p>Koki Takeda has created "omokake" as a free application.<br>
 			This service is provided by Koki Takeda free of charge and is intended to be used as is.</p>
 			<p>This privacy policy describes the user information transmitted in<br>
 				the "omokake" smartphone application and how it is handled.<br><br>
