--- a/omokake.html
+++ b/omokake.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<body bgcolor="black" text="white">
+<body bgcolor="black" text="white">
 <title>omokake</title>
 <meta name="viewport" content="width=device-width">
 <!--link href="css/style2.css" rel="stylesheet"-->
@@ -12,7 +12,9 @@
 <br>
 <div class="imgtop">
   <div align="center">
-    <img src="img/webTitel.png" alt="icon" title="icon">
+    <a href="https://apps.apple.com/jp/app/omokake/id1484496250">
+      <img src="img/webTitel.png" alt="icon"title="icon">
+    </a>
   </div>
 </div>
 
@@ -59,13 +61,16 @@ iPhoneを購入したあの日から<br>
 たくさんの思い出に触れることを<br>
 コンセプトにしたアプリです。<br>
 <br>
-<img src="img/mymovie.gif" alt="icon" title="icon">
+<img src="img/mymovie.gif" alt="icon" title="icon">
 <br>
 <br>
 ・プライバシーポリシー:<br>
 <a href="privacypolicy.html">https://kokitakashiki.github.io/homepage.io/
-  privacypolicy.html</a><br><br>
-
+  privacypolicy.html</a><br>
+  <br>
+  ・app page:<br>
+  <a href="https://apps.apple.com/jp/app/omokake/id1484496250">https://apps.apple.com/jp/app/omokake/id1484496250</a><br>
+  <br>
   ・Developing by koki takeda:<br>
   <a href="https://twitter.com/bluewhitered123">https://twitter.com/bluewhitered123
     </a><br><br>
