remove wiki link

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 			
 			<div class="titleBer">
 				<div align="center">
-					wellcome<br><br>
-					<a href="http://kokitakeda.sakura.ne.jp/dokuwiki/">Wiki is here</a>
+					<br>wellcome<br><br>
 				</div>
 			</div>
 			<hr width="400">
