fix: 文章を修正。

--- a/mainContent/aboutEng.html
+++ b/mainContent/aboutEng.html
@@ -40,9 +40,14 @@
 			<div align="left">
 				<div style="padding : 0px 50px 0px 5px">
 				I am Koki Takeda.<br>
-				Department of Media Science, Tokyo University of Technology<br>
-				Planned to graduate in 2019<br><br>
-
+				I am using Swift at Xcode to create applications for iOS.<br>
+				<br>
+				・<a href='../omokake.html'>omokake</a> released<br>
+				・Department of Media Science, Tokyo University of Technology<br>
+				Planned to graduate in 2019<br>
+				<br>
+				・linkedin:<br>
+				<a href="https://jp.linkedin.com/in/%E5%AD%9D%E9%A8%8E-%E6%AD%A6%E7%94%B0-1568741a7">https://www.linkedin.com/in/孝騎-武田-1568741a7/</a><br><br>
 				・twitter:<br>
 				<a href="https://twitter.com/bluewhitered123">https://twitter.com/bluewhitered123</a><br><br>
 				・facebook:<br>
@@ -51,13 +56,12 @@
 				<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/users/50921451</a><br><br>
 
 				The programming language you are using is primarily swift.<br>
-				I can make the c language the basic. If you want to see other skills that I can use, you can check my<a href="https://www.wantedly.com/users/50921451">wantedly</a> site.<br>
-				I am using swift at xcode to create applications for ios.<br><br>
-
+				I can make the c language the basic. If you want to see other skills that I can use, you can check my <a href="https://jp.linkedin.com/in/%E5%AD%9D%E9%A8%8E-%E6%AD%A6%E7%94%B0-1568741a7">linkedin</a> site.<br>
+				<br>
 				· Hobbies are enjoying games, animation, manga etc.<br>
 				· Going to museums, museums, exhibitions.<br>
 				· Looking for a coffee shop in town.<br>
-				· Reading scientific journals (as a genre, particle physics · theory of relativity · black hole · planetary physics).<br><br>
+				<br>
 				Thankyou for reading in this page.<br><br>
 			</div>
 		</div>
