--- a/mainContent/about.html
+++ b/mainContent/about.html
@@ -40,11 +40,14 @@
 			<div align="left">
 				<div style="padding : 0px 50px 0px 5px">
 					武田孝騎です。<br>
-					現在、iOSアプリケーション製作者としてomokakeを開発<br>
-					東京工科大学メディア学部所属2019年卒業<br><br>
+					iOSアプリケーション製作をしています。<br>
+					・<a href='../omokake.html'>omokake</a>をリリースしました。<br>
+					・東京工科大学メディア学部所属2019年卒業<br><br>
 
 					・note:<br>
-					<a href="https://note.com/kokemori_trip">https://note.com/kokemori_trip</a><br><br>
+					<a href="https://note.com/kokemori_trip">https://jp.linkedin.com/in/%E5%AD%9D%E9%A8%8E-%E6%AD%A6%E7%94%B0-1568741a7</a><br><br>
+					・linkedin:<br>
+					<a href="https://jp.linkedin.com/in/%E5%AD%9D%E9%A8%8E-%E6%AD%A6%E7%94%B0-1568741a7">https://www.linkedin.com/in/孝騎-武田-1568741a7/</a><br><br>
 					・twitter:<br>
 					<a href="https://twitter.com/bluewhitered123">https://twitter.com/bluewhitered123</a><br><br>
 					・facebook:<br>
@@ -52,16 +55,14 @@
 					・wantedly:<br>
 					<a href="https://www.wantedly.com/users/50921451">https://www.wantedly.com/<br>users/50921451</a><br><br>
 
-					使用しているプログラミング言語は主にswiftですが、c言語も基礎ですができます。その他使える技能は自分の<a href="https://www.wantedly.com/users/50921451">wantedly</a>サイトを見ていただけるとありがたいです。<br>
-
-					xcodeにてswiftを使ってios向けアプリケーション制作をしています。<br><br>
-
+					使用しているプログラミング言語は主にSwiftですが、C言語も基礎ですができます。その他使える技能は自分の<a href="https://jp.linkedin.com/in/%E5%AD%9D%E9%A8%8E-%E6%AD%A6%E7%94%B0-1568741a7">linkedin</a>サイトを見ていただけるとありがたいです。<br>
+					<br>
 					趣味はゲームやアニメ・漫画等を楽しむことや<br>
 					美術館・博物館・展覧会に赴くこと<br>
 					（ジャンルとしては大学入学以前は西洋美術が多めでしたが、<br>
 					現在はやまと絵・新版画・現代美術・舞台芸術など幅広くなりました。）、<br>
 					喫茶店・コーヒーショップを探すこと、<br>
-					科学雑誌を読むこと（ジャンルとしては素粒子物理学・相対性理論・ブラックホール・惑星物理学）などです。<br><br>
+					<br>
 					サイトは建設中です。これからよくしていこうと思います。<br><br>
 				</div>
 			</div>
