プライバシーポリシーを更新

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,26 +1,116 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-	"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<title>プライバシーポリシー</title>
-	</head>
-	<body>
-		<h1>プライバシーポリシー</h1>
-		<h2>プライバシーポリシー</h2>
-			<p>Koki Takedaは「omokake」を無料アプリとして作成しました。<br>
-        本サービスは、Koki Takedaが無償で提供するものであり、そのまま使用することを目的としています。</p>
-			<p>このプライバシーポリシーは、スマートフォン向けアプリ「omokake」に<br>
-        おいて送信される利用者情報とその取り扱いについての説明です。<br><br>
-        第三者に個人を特定できる情報を提供することはございません。<br>
-        また、利用者の利用データを販売したりすることもございません。<br>
-        個人情報の管理には細心の注意を払い、以下に掲げた通りに扱います。<br><br>
-        本プライバシーポリシーの内容をご確認・ご理解頂いた上で本アプリをご利用下さい。<br><br>
-			</p>
-		<h2>個人情報の第三者への開示</h2>
-			<p>等アプリは個人情報の収集、開示は一切おこないません。</p>
-		<h2>プライバシーポリシーの変更について</h2>
-		<p>当サイトは、個人情報に関して適用される日本の法令を遵守するとともに、<br>
-      本ポリシーの内容を適宜見直しその改善に努めます。<br><br>
-      修正された最新のプライバシーポリシーは常に本ページにて開示されます。</p>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>プライバシーポリシー - omokake</title>
+	<style>
+		body {
+			font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic", YuGothic, Verdana, Meiryo, sans-serif;
+			line-height: 1.6;
+			color: #333;
+			background-color: #ffffff;
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			transition: background-color 0.3s ease, color 0.3s ease;
+		}
+		h1 {
+			text-align: center;
+			font-size: 24px;
+			margin-bottom: 40px;
+			color: #333;
+		}
+		h2 {
+			font-size: 18px;
+			border-bottom: 1px solid #ddd;
+			padding-bottom: 10px;
+			margin-top: 30px;
+			color: #333;
+		}
+		p {
+			margin-bottom: 15px;
+			font-size: 14px;
+		}
+		.contact-info {
+			background: #f9f9f9;
+			padding: 15px;
+			border-radius: 8px;
+			border: 1px solid #e0e0e0;
+		}
+
+		.language-toggle {
+			text-align: right;
+			margin-bottom: 20px;
+		}
+		.language-toggle a {
+			color: #007AFF;
+			text-decoration: none;
+			font-size: 14px;
+		}
+		.language-toggle a:hover {
+			text-decoration: underline;
+		}
+
+		/* ダークモード対応 */
+		@media (prefers-color-scheme: dark) {
+			body {
+				background-color: #1a1a1a;
+				color: #e0e0e0;
+			}
+			h1, h2 {
+				color: #ffffff;
+			}
+			h2 {
+				border-bottom-color: #404040;
+			}
+			.contact-info {
+				background: #2a2a2a;
+				border-color: #404040;
+			}
+			.language-toggle a {
+				color: #0A84FF;
+			}
+		}
+	</style>
+</head>
+<body>
+	<div class="language-toggle">
+		<a href="privacypolicyEnglish.html">English</a>
+	</div>
+	<h1>プライバシーポリシー</h1>
+
+	<p>Koki Takedaは「omokake」を基本無料、アプリ内課金ありのアプリとして提供しています。<br>
+	本サービスは、Koki Takedaが提供するものであり、そのまま使用することを目的としています。</p>
+
+	<p>このプライバシーポリシーは、スマートフォン向けアプリ「omokake」において送信される利用者情報とその取り扱いについての説明です。<br>
+	第三者に個人を特定できる情報を提供することはございません。<br>
+	また、利用者の利用データを販売したりすることもございません。<br>
+	個人情報の管理には細心の注意を払い、以下に掲げた通りに扱います。<br>
+	本プライバシーポリシーの内容をご確認・ご理解頂いた上で本アプリをご利用下さい。</p>
+
+	<h2>個人情報の収集と利用</h2>
+	<p>本アプリは個人情報の収集、保存は一切おこないません。<br>
+	ユーザーの写真データは全てお客様のデバイス内でのみ処理され、外部に送信されることはありません。</p>
+
+	<h2>アプリ内課金について</h2>
+	<p>本アプリでは、追加機能やコンテンツの購入が可能です。<br>
+	決済処理は全てApple Inc.のApp Storeを通じて行われます。<br>
+	購入履歴や決済情報はAppleによって管理され、本アプリ開発者はこれらの情報にアクセスすることはありません。<br>
+	課金に関する詳細については、App Storeの利用規約およびプライバシーポリシーをご確認ください。</p>
+
+	<h2>個人情報の第三者への開示</h2>
+	<p>本アプリは個人情報の収集、開示は一切おこないません。</p>
+
+	<h2>プライバシーポリシーの変更について</h2>
+	<p>当サイトは、個人情報に関して適用される日本の法令を遵守するとともに、本ポリシーの内容を適宜見直しその改善に努めます。<br>
+	修正された最新のプライバシーポリシーは常に本ページにて開示されます。</p>
+
+	<h2>お問い合わせ</h2>
+	<p>本プライバシーポリシーに関するお問い合わせは、下記までご連絡ください。</p>
+	<p>メールアドレス: bluewhitered123@gmail.com</p>
+
+	<h2>最終更新日</h2>
+	<p>2025年11月23日</p>
+</body>
 </html>
