--- a/privacypolicyEnglish.html
+++ b/privacypolicyEnglish.html
@@ -1,26 +1,116 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-	"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Privacy Policy</title>
-	</head>
-	<body>
-		<h1>Privacy Policy</h1>
-		<h2>Privacy Policy</h2>
-			<p>Koki Takeda has created "omokake" as a free application.<br>
-			This service is provided by Koki Takeda free of charge and is intended to be used as is.</p>
-			<p>This privacy policy describes the user information transmitted in<br>
-				the "omokake" smartphone application and how it is handled.<br><br>
-				We do not provide personally identifiable information to third parties.<br>
-				We also do not sell the user's usage data.<br>
-				We take the utmost care in managing personal information and treat it as set forth below.<br><br>
-				Please use this application only after you have read and understood the contents of this Privacy Policy.<br><br>
-			</p>
-		<h2>Disclosure of Personal Information to Third Parties</h2>
-			<p>We will not collect or disclose any personal information.</p>
-		<h2>Changes to the Privacy Policy</h2>
-		<p>This site will comply with Japanese laws and regulations applicable to personal information, <br>
-			and will review and improve this policy as appropriate.<br><br>
-			The revised and updated Privacy Policy will always be available on this page.</p>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Privacy Policy - omokake</title>
+	<style>
+		body {
+			font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic", YuGothic, Verdana, Meiryo, sans-serif;
+			line-height: 1.6;
+			color: #333;
+			background-color: #ffffff;
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			transition: background-color 0.3s ease, color 0.3s ease;
+		}
+		h1 {
+			text-align: center;
+			font-size: 24px;
+			margin-bottom: 40px;
+			color: #333;
+		}
+		h2 {
+			font-size: 18px;
+			border-bottom: 1px solid #ddd;
+			padding-bottom: 10px;
+			margin-top: 30px;
+			color: #333;
+		}
+		p {
+			margin-bottom: 15px;
+			font-size: 14px;
+		}
+		.contact-info {
+			background: #f9f9f9;
+			padding: 15px;
+			border-radius: 8px;
+			border: 1px solid #e0e0e0;
+		}
+
+		.language-toggle {
+			text-align: right;
+			margin-bottom: 20px;
+		}
+		.language-toggle a {
+			color: #007AFF;
+			text-decoration: none;
+			font-size: 14px;
+		}
+		.language-toggle a:hover {
+			text-decoration: underline;
+		}
+
+		/* Dark mode support */
+		@media (prefers-color-scheme: dark) {
+			body {
+				background-color: #1a1a1a;
+				color: #e0e0e0;
+			}
+			h1, h2 {
+				color: #ffffff;
+			}
+			h2 {
+				border-bottom-color: #404040;
+			}
+			.contact-info {
+				background: #2a2a2a;
+				border-color: #404040;
+			}
+			.language-toggle a {
+				color: #0A84FF;
+			}
+		}
+	</style>
+</head>
+<body>
+	<div class="language-toggle">
+		<a href="privacypolicy.html">日本語</a>
+	</div>
+	<h1>Privacy Policy</h1>
+
+	<p>Koki Takeda provides "omokake" as a free application with in-app purchases.<br>
+	This service is provided by Koki Takeda and is intended to be used as is.</p>
+
+	<p>This privacy policy describes the user information transmitted in the "omokake" smartphone application and how it is handled.<br>
+	We do not provide personally identifiable information to third parties.<br>
+	We also do not sell the user's usage data.<br>
+	We take the utmost care in managing personal information and treat it as set forth below.<br>
+	Please use this application only after you have read and understood the contents of this Privacy Policy.</p>
+
+	<h2>Collection and Use of Personal Information</h2>
+	<p>This application does not collect or store any personal information.<br>
+	All user photo data is processed entirely on your device and is never transmitted externally.</p>
+
+	<h2>In-App Purchases</h2>
+	<p>This application offers the ability to purchase additional features and content.<br>
+	All payment processing is conducted through Apple Inc.'s App Store.<br>
+	Purchase history and payment information are managed by Apple, and the application developer does not have access to this information.<br>
+	For more details regarding payments, please refer to the App Store Terms of Service and Privacy Policy.</p>
+
+	<h2>Disclosure of Personal Information to Third Parties</h2>
+	<p>This application will not collect or disclose any personal information.</p>
+
+	<h2>Changes to the Privacy Policy</h2>
+	<p>This site will comply with Japanese laws and regulations applicable to personal information, and will review and improve this policy as appropriate.<br>
+	The revised and updated Privacy Policy will always be available on this page.</p>
+
+	<h2>Contact</h2>
+	<p>If you have any questions about this Privacy Policy, please contact us at:</p>
+	<p>Email: bluewhitered123@gmail.com</p>
+
+	<h2>Last Updated</h2>
+	<p>November 23, 2025</p>
+</body>
 </html>
