omokakeの説明ページを更新

--- a/omokakeEng.html
+++ b/omokakeEng.html
@@ -24,7 +24,7 @@
 
   <div class="chgEng">
     <div align="right">
-      <a href="omokakeEng.html">English</a>
+      <a href="omokake.html">日本語</a>
       <br>
       <br>
     </div>
@@ -33,32 +33,32 @@
   <div class="main">
     <div align="left">
       <div style="padding: 0px 50px 0px 5px">
-        iPhoneを購入したあの日から<br>
-        どれくらい経ちましたか？<br>
+        How long has it been<br>
+        since the day you got your iPhone?<br>
         <br>
-        楽しい日々の写真や<br>
-        思いついたときに撮った写真、<br>
-        暮らしのメモ用の写真や<br>
-        感動した時の画面のスクリーンショット、<br>
+        Photos from fun days,<br>
+        photos taken on a whim,<br>
+        photos for everyday notes,<br>
+        screenshots of moments that moved you,<br>
         <br>
-        その思い出たちが欠片となって動き出したら？<br>
+        What if those memories became fragments and came to life?<br>
         <br>
-        たくさんの思い出に触れることを<br>
-        コンセプトにしたアプリです。<br>
+        This app is designed around the concept<br>
+        of touching many memories.<br>
         <br>
         <img src="img/mymovie.gif" alt="omokake demo" title="omokake demo" width="395" style="border-radius: 33px;">
         <br>
         <br>
-        ・プライバシーポリシー:<br>
-        <a href="privacypolicy.html">https://kokitakashiki.github.io/homepage.io/privacypolicy.html</a><br>
+        ・Privacy Policy:<br>
+        <a href="privacypolicyEnglish.html">https://kokitakashiki.github.io/homepage.io/privacypolicyEnglish.html</a><br>
         <br>
-        ・利用規約:<br>
-        <a href="terms.html">https://kokitakashiki.github.io/homepage.io/terms.html</a><br>
+        ・Terms of Service:<br>
+        <a href="termsEnglish.html">https://kokitakashiki.github.io/homepage.io/termsEnglish.html</a><br>
         <br>
-        ・app page:<br>
+        ・App Page:<br>
         <a href="https://apps.apple.com/jp/app/omokake/id1484496250">https://apps.apple.com/jp/app/omokake/id1484496250</a><br>
         <br>
-        ・Developing by koki takeda:<br>
+        ・Developed by Koki Takeda:<br>
         <a href="https://twitter.com/bluewhitered123">https://twitter.com/bluewhitered123</a><br>
         <br>
       </div>
